book: update es
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/es/v2/Apéndice-C:-Comandos-de-Git-Configuración.html
+++ b/external/book/content/book/es/v2/Apéndice-C:-Comandos-de-Git-Configuración.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Apéndice-C:-Comandos-de-Git-Obtener-y-Crear-Proyectos
 title: Git - Configuración
 url: "/book/es/v2/Apéndice-C:-Comandos-de-Git-Configuración.html"
+aliases:
+- "/book/es/commands.html"
+- "/book/es/v1/commands.html"
 ---
 <p>A lo largo del libro hemos introducido docenas de comandos de Git y nos hemos esforzado para introducirlos dentro de una especie de narrativa, añadiendo más comandos a la historia poco a poco. Sin embargo, esto nos deja con ejemplos de uso de los comandos algo dispersos por todo el libro.</p><p>En este apéndice, repasaremos todos los comandos de Git que hemos tratado a lo largo del libro, agrupados por el uso que se les ha dado. Vamos a hablar de lo que hace cada comando de manera muy general y a continuación señalaremos en qué parte del libro puedes encontrar un uso de él.</p>
 <h2 id="_configuración">Configuración</h2>
