--- a/external/book/content/book/es/v2/Fundamentos-de-Git-Alias-de-Git.html
+++ b/external/book/content/book/es/v2/Fundamentos-de-Git-Alias-de-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Fundamentos-de-Git-Etiquetado
     next: book/es/v2/Fundamentos-de-Git-Resumen
 title: Git - Alias de Git
+aliases:
+- "/book/es/Fundamentos-de-Git-Consejos-y-trucos.html"
+- "/book/es/v1/Fundamentos-de-Git-Consejos-y-trucos.html"
 ---
 <h2 id="r_git_aliases">Alias de Git</h2>
 <div class="paragraph">
