--- a/external/book/content/book/es/v2/Fundamentos-de-Git-Deshacer-Cosas.html
+++ b/external/book/content/book/es/v2/Fundamentos-de-Git-Deshacer-Cosas.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Fundamentos-de-Git-Ver-el-Historial-de-Confirmaciones
     next: book/es/v2/Fundamentos-de-Git-Trabajar-con-Remotos
 title: Git - Deshacer Cosas
+aliases:
+- "/book/es/Fundamentos-de-Git-Deshaciendo-cosas.html"
+- "/book/es/v1/Fundamentos-de-Git-Deshaciendo-cosas.html"
 ---
 <h2 id="r_undoing">Deshacer Cosas</h2>
 <div class="paragraph">
