--- a/external/book/content/book/es/v2/Fundamentos-de-Git-Etiquetado.html
+++ b/external/book/content/book/es/v2/Fundamentos-de-Git-Etiquetado.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Fundamentos-de-Git-Trabajar-con-Remotos
     next: book/es/v2/Fundamentos-de-Git-Alias-de-Git
 title: Git - Etiquetado
+aliases:
+- "/book/es/Fundamentos-de-Git-Creando-etiquetas.html"
+- "/book/es/v1/Fundamentos-de-Git-Creando-etiquetas.html"
 ---
 <h2 id="r_git_tagging">Etiquetado</h2>
 <div class="paragraph">
