--- a/external/book/content/book/es/v2/Fundamentos-de-Git-Guardando-cambios-en-el-Repositorio.html
+++ b/external/book/content/book/es/v2/Fundamentos-de-Git-Guardando-cambios-en-el-Repositorio.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Fundamentos-de-Git-Obteniendo-un-repositorio-Git
     next: book/es/v2/Fundamentos-de-Git-Ver-el-Historial-de-Confirmaciones
 title: Git - Guardando cambios en el Repositorio
+aliases:
+- "/book/es/Fundamentos-de-Git-Guardando-cambios-en-el-repositorio.html"
+- "/book/es/v1/Fundamentos-de-Git-Guardando-cambios-en-el-repositorio.html"
 ---
 <h2 id="_guardando_cambios_en_el_repositorio">Guardando cambios en el Repositorio</h2>
 <div class="paragraph">
