--- a/external/book/content/book/es/v2/Fundamentos-de-Git-Obteniendo-un-repositorio-Git.html
+++ b/external/book/content/book/es/v2/Fundamentos-de-Git-Obteniendo-un-repositorio-Git.html
@@ -16,6 +16,11 @@ book:
     previous: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Resumen
     next: book/es/v2/Fundamentos-de-Git-Guardando-cambios-en-el-Repositorio
 title: Git - Obteniendo un repositorio Git
+aliases:
+- "/book/es/Fundamentos-de-Git.html"
+- "/book/es/v1/Fundamentos-de-Git.html"
+- "/book/es/Fundamentos-de-Git-Obteniendo-un-repositorio-Git.html"
+- "/book/es/v1/Fundamentos-de-Git-Obteniendo-un-repositorio-Git.html"
 ---
 <p>Si pudieras leer solo un capítulo para empezar a trabajar con Git, este es el capítulo que debes leer.
 Este capítulo cubre todos los comandos básicos que necesitas para hacer la gran mayoría de cosas a las que eventualmente vas a dedicar tu tiempo mientras trabajas con Git.
