--- a/external/book/content/book/es/v2/Fundamentos-de-Git-Resumen.html
+++ b/external/book/content/book/es/v2/Fundamentos-de-Git-Resumen.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Fundamentos-de-Git-Alias-de-Git
     next: book/es/v2/Ramificaciones-en-Git-¿Qué-es-una-rama%3F
 title: Git - Resumen
+aliases:
+- "/book/es/Fundamentos-de-Git-Resumen.html"
+- "/book/es/v1/Fundamentos-de-Git-Resumen.html"
 ---
 <h2 id="_resumen_2">Resumen</h2>
 <div class="paragraph">
