--- a/external/book/content/book/es/v2/Fundamentos-de-Git-Trabajar-con-Remotos.html
+++ b/external/book/content/book/es/v2/Fundamentos-de-Git-Trabajar-con-Remotos.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Fundamentos-de-Git-Deshacer-Cosas
     next: book/es/v2/Fundamentos-de-Git-Etiquetado
 title: Git - Trabajar con Remotos
+aliases:
+- "/book/es/Fundamentos-de-Git-Trabajando-con-repositorios-remotos.html"
+- "/book/es/v1/Fundamentos-de-Git-Trabajando-con-repositorios-remotos.html"
 ---
 <h2 id="r_remote_repos">Trabajar con Remotos</h2>
 <div class="paragraph">
