--- a/external/book/content/book/es/v2/Fundamentos-de-Git-Ver-el-Historial-de-Confirmaciones.html
+++ b/external/book/content/book/es/v2/Fundamentos-de-Git-Ver-el-Historial-de-Confirmaciones.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Fundamentos-de-Git-Guardando-cambios-en-el-Repositorio
     next: book/es/v2/Fundamentos-de-Git-Deshacer-Cosas
 title: Git - Ver el Historial de Confirmaciones
+aliases:
+- "/book/es/Fundamentos-de-Git-Viendo-el-histórico-de-confirmaciones.html"
+- "/book/es/v1/Fundamentos-de-Git-Viendo-el-histórico-de-confirmaciones.html"
 ---
 <h2 id="r_viewing_history">Ver el Historial de Confirmaciones</h2>
 <div class="paragraph">
