--- a/external/book/content/book/es/v2/Git-en-el-Servidor-Configurando-Git-en-un-servidor.html
+++ b/external/book/content/book/es/v2/Git-en-el-Servidor-Configurando-Git-en-un-servidor.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Git-en-el-Servidor-Los-Protocolos
     next: book/es/v2/Git-en-el-Servidor-Generando-tu-clave-pública-SSH
 title: Git - Configurando Git en un servidor
+aliases:
+- "/book/es/Git-en-un-servidor-Poniendo-Git-en-un-Servidor.html"
+- "/book/es/v1/Git-en-un-servidor-Poniendo-Git-en-un-Servidor.html"
 ---
 <h2 id="r_git_on_the_server">Configurando Git en un servidor</h2>
 <div class="paragraph">
