--- a/external/book/content/book/es/v2/Git-en-el-Servidor-El-demonio-Git.html
+++ b/external/book/content/book/es/v2/Git-en-el-Servidor-El-demonio-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Git-en-el-Servidor-Configurando-el-servidor
     next: book/es/v2/Git-en-el-Servidor-HTTP-Inteligente
 title: Git - El demonio Git
+aliases:
+- "/book/es/Git-en-un-servidor-Git-en-un-alojamiento-externo.html"
+- "/book/es/v1/Git-en-un-servidor-Git-en-un-alojamiento-externo.html"
 ---
 <h2 id="_el_demonio_git">El demonio Git</h2>
 <div class="paragraph">
