--- a/external/book/content/book/es/v2/Git-en-el-Servidor-Generando-tu-clave-pública-SSH.html
+++ b/external/book/content/book/es/v2/Git-en-el-Servidor-Generando-tu-clave-pública-SSH.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Git-en-el-Servidor-Configurando-el-servidor
 title: Git - Generando tu clave pública SSH
 url: "/book/es/v2/Git-en-el-Servidor-Generando-tu-clave-pública-SSH.html"
+aliases:
+- "/book/es/Git-en-un-servidor-Generando-tu-clave-pública-SSH.html"
+- "/book/es/v1/Git-en-un-servidor-Generando-tu-clave-pública-SSH.html"
 ---
 <h2 id="r_generate_ssh_key">Generando tu clave pública SSH</h2>
 <div class="paragraph">
