--- a/external/book/content/book/es/v2/Git-en-el-Servidor-Git-en-un-alojamiento-externo.html
+++ b/external/book/content/book/es/v2/Git-en-el-Servidor-Git-en-un-alojamiento-externo.html
@@ -16,6 +16,17 @@ book:
     previous: book/es/v2/Git-en-el-Servidor-GitLab
     next: book/es/v2/Git-en-el-Servidor-Resumen
 title: Git - Git en un alojamiento externo
+aliases:
+- "/book/es/Git-en-un-servidor-Acceso-público.html"
+- "/book/es/v1/Git-en-un-servidor-Acceso-público.html"
+- "/book/es/Git-en-un-servidor-GitWeb.html"
+- "/book/es/v1/Git-en-un-servidor-GitWeb.html"
+- "/book/es/Git-en-un-servidor-Gitosis.html"
+- "/book/es/v1/Git-en-un-servidor-Gitosis.html"
+- "/book/es/Git-en-un-servidor-El-demonio-Git.html"
+- "/book/es/v1/Git-en-un-servidor-El-demonio-Git.html"
+- "/book/es/Git-en-un-servidor-Recapitulación.html"
+- "/book/es/v1/Git-en-un-servidor-Recapitulación.html"
 ---
 <h2 id="_git_en_un_alojamiento_externo">Git en un alojamiento externo</h2>
 <div class="paragraph">
