--- a/external/book/content/book/es/v2/Git-en-el-Servidor-Los-Protocolos.html
+++ b/external/book/content/book/es/v2/Git-en-el-Servidor-Los-Protocolos.html
@@ -16,6 +16,11 @@ book:
     previous: book/es/v2/Ramificaciones-en-Git-Recapitulación
     next: book/es/v2/Git-en-el-Servidor-Configurando-Git-en-un-servidor
 title: Git - Los Protocolos
+aliases:
+- "/book/es/Git-en-un-servidor.html"
+- "/book/es/v1/Git-en-un-servidor.html"
+- "/book/es/Git-en-un-servidor-Los-Protocolos.html"
+- "/book/es/v1/Git-en-un-servidor-Los-Protocolos.html"
 ---
 <p>
 En este punto, deberías ser capaz de realizar la mayoría de las tareas diarias para las cuales estarás usando Git.
