--- a/external/book/content/book/es/v2/Git-en-entornos-distribuidos-Contribuyendo-a-un-Proyecto.html
+++ b/external/book/content/book/es/v2/Git-en-entornos-distribuidos-Contribuyendo-a-un-Proyecto.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Git-en-entornos-distribuidos-Flujos-de-trabajo-distribuidos
     next: book/es/v2/Git-en-entornos-distribuidos-Manteniendo-un-proyecto
 title: Git - Contribuyendo a un Proyecto
+aliases:
+- "/book/es/Git-en-entornos-distribuidos-Contribuyendo-a-un-proyecto.html"
+- "/book/es/v1/Git-en-entornos-distribuidos-Contribuyendo-a-un-proyecto.html"
 ---
 <h2 id="r_contributing_project">Contribuyendo a un Proyecto</h2>
 <div class="paragraph">
