--- a/external/book/content/book/es/v2/Git-en-entornos-distribuidos-Flujos-de-trabajo-distribuidos.html
+++ b/external/book/content/book/es/v2/Git-en-entornos-distribuidos-Flujos-de-trabajo-distribuidos.html
@@ -16,6 +16,11 @@ book:
     previous: book/es/v2/Git-en-el-Servidor-Resumen
     next: book/es/v2/Git-en-entornos-distribuidos-Contribuyendo-a-un-Proyecto
 title: Git - Flujos de trabajo distribuidos
+aliases:
+- "/book/es/Git-en-entornos-distribuidos.html"
+- "/book/es/v1/Git-en-entornos-distribuidos.html"
+- "/book/es/Git-en-entornos-distribuidos-Flujos-de-trabajo-distribuidos.html"
+- "/book/es/v1/Git-en-entornos-distribuidos-Flujos-de-trabajo-distribuidos.html"
 ---
 <p>
 Ahora que ya tienes un repositorio Git configurado como punto de trabajo para que los desarrolladores compartan su código, y además ya conoces los comandos básicos de Git para usar en local, verás cómo se puede utilizar alguno de los flujos de trabajo distribuido que Git permite.</p><p>En este capítulo verás como trabajar con Git en un entorno distribuido como colaborador o como integrador. Es decir, aprenderás como contribuir adecuadamente a un proyecto, de manera fácil tanto para ti como para el responsable del proyecto, y también como mantener adecuadamente un proyecto con múltiples desarrolladores.</p>
