--- a/external/book/content/book/es/v2/Git-y-Otros-Sistemas-Git-como-Cliente.html
+++ b/external/book/content/book/es/v2/Git-y-Otros-Sistemas-Git-como-Cliente.html
@@ -16,6 +16,11 @@ book:
     previous: book/es/v2/Personalización-de-Git-Recapitulación
     next: book/es/v2/Git-y-Otros-Sistemas-Migración-a-Git
 title: Git - Git como Cliente
+aliases:
+- "/book/es/Git-y-Otros-Sistemas.html"
+- "/book/es/v1/Git-y-Otros-Sistemas.html"
+- "/book/es/Git-y-Otros-Sistemas-Git-y-Subversion.html"
+- "/book/es/v1/Git-y-Otros-Sistemas-Git-y-Subversion.html"
 ---
 <p>El mundo no es perfecto.
 Por lo general, no se puede cambiar inmediatamente cada proyecto con el que está en contacto Git.
