--- a/external/book/content/book/es/v2/Git-y-Otros-Sistemas-Migración-a-Git.html
+++ b/external/book/content/book/es/v2/Git-y-Otros-Sistemas-Migración-a-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Git-y-Otros-Sistemas-Resumen
 title: Git - Migración a Git
 url: "/book/es/v2/Git-y-Otros-Sistemas-Migración-a-Git.html"
+aliases:
+- "/book/es/Git-y-Otros-Sistemas-Migrating-to-Git.html"
+- "/book/es/v1/Git-y-Otros-Sistemas-Migrating-to-Git.html"
 ---
 <h2 id="r_migrating">Migración a Git</h2>
 <div class="paragraph">
