--- a/external/book/content/book/es/v2/Git-y-Otros-Sistemas-Resumen.html
+++ b/external/book/content/book/es/v2/Git-y-Otros-Sistemas-Resumen.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Git-y-Otros-Sistemas-Migración-a-Git
     next: book/es/v2/Los-entresijos-internos-de-Git-Fontanería-y-porcelana
 title: Git - Resumen
+aliases:
+- "/book/es/Git-y-Otros-Sistemas-Summary.html"
+- "/book/es/v1/Git-y-Otros-Sistemas-Summary.html"
 ---
 <h2 id="_resumen_10">Resumen</h2>
 <div class="paragraph">
