--- a/external/book/content/book/es/v2/Herramientas-de-Git-Fusión-Avanzada.html
+++ b/external/book/content/book/es/v2/Herramientas-de-Git-Fusión-Avanzada.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Herramientas-de-Git-Rerere
 title: Git - Fusión Avanzada
 url: "/book/es/v2/Herramientas-de-Git-Fusión-Avanzada.html"
+aliases:
+- "/book/es/Las-herramientas-de-Git-Fusión-de-subárboles.html"
+- "/book/es/v1/Las-herramientas-de-Git-Fusión-de-subárboles.html"
 ---
 <h2 id="r_advanced_merging">Fusión Avanzada</h2>
 <div class="paragraph">
