--- a/external/book/content/book/es/v2/Herramientas-de-Git-Guardado-rápido-y-Limpieza.html
+++ b/external/book/content/book/es/v2/Herramientas-de-Git-Guardado-rápido-y-Limpieza.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Herramientas-de-Git-Firmando-tu-trabajo
 title: Git - Guardado rápido y Limpieza
 url: "/book/es/v2/Herramientas-de-Git-Guardado-rápido-y-Limpieza.html"
+aliases:
+- "/book/es/Las-herramientas-de-Git-Guardado-rápido-provisional.html"
+- "/book/es/v1/Las-herramientas-de-Git-Guardado-rápido-provisional.html"
 ---
 <h2 id="r_git_stashing">Guardado rápido y Limpieza</h2>
 <div class="paragraph">
