--- a/external/book/content/book/es/v2/Herramientas-de-Git-Haciendo-debug-con-Git.html
+++ b/external/book/content/book/es/v2/Herramientas-de-Git-Haciendo-debug-con-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Herramientas-de-Git-Rerere
     next: book/es/v2/Herramientas-de-Git-Submódulos
 title: Git - Haciendo debug con Git
+aliases:
+- "/book/es/Las-herramientas-de-Git-Depuración-con-Git.html"
+- "/book/es/v1/Las-herramientas-de-Git-Depuración-con-Git.html"
 ---
 <h2 id="_haciendo_debug_con_git">Haciendo debug con Git</h2>
 <div class="paragraph">
