--- a/external/book/content/book/es/v2/Herramientas-de-Git-Organización-interactiva.html
+++ b/external/book/content/book/es/v2/Herramientas-de-Git-Organización-interactiva.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Herramientas-de-Git-Guardado-rápido-y-Limpieza
 title: Git - Organización interactiva
 url: "/book/es/v2/Herramientas-de-Git-Organización-interactiva.html"
+aliases:
+- "/book/es/Las-herramientas-de-Git-Preparación-interactiva.html"
+- "/book/es/v1/Las-herramientas-de-Git-Preparación-interactiva.html"
 ---
 <h2 id="r_interactive_staging">Organización interactiva</h2>
 <div class="paragraph">
