--- a/external/book/content/book/es/v2/Herramientas-de-Git-Reescribiendo-la-Historia.html
+++ b/external/book/content/book/es/v2/Herramientas-de-Git-Reescribiendo-la-Historia.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Herramientas-de-Git-Buscando
     next: book/es/v2/Herramientas-de-Git-Reiniciar-Desmitificado
 title: Git - Reescribiendo la Historia
+aliases:
+- "/book/es/Las-herramientas-de-Git-Reescribiendo-la-historia.html"
+- "/book/es/v1/Las-herramientas-de-Git-Reescribiendo-la-historia.html"
 ---
 <h2 id="r_rewriting_history">Reescribiendo la Historia</h2>
 <div class="paragraph">
