--- a/external/book/content/book/es/v2/Herramientas-de-Git-Resumen.html
+++ b/external/book/content/book/es/v2/Herramientas-de-Git-Resumen.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Herramientas-de-Git-Almacenamiento-de-credenciales
     next: book/es/v2/Personalización-de-Git-Configuración-de-Git
 title: Git - Resumen
+aliases:
+- "/book/es/Las-herramientas-de-Git-Recapitulación.html"
+- "/book/es/v1/Las-herramientas-de-Git-Recapitulación.html"
 ---
 <h2 id="_resumen_9">Resumen</h2>
 <div class="paragraph">
