--- a/external/book/content/book/es/v2/Herramientas-de-Git-Revisión-por-selección.html
+++ b/external/book/content/book/es/v2/Herramientas-de-Git-Revisión-por-selección.html
@@ -17,6 +17,11 @@ book:
     next: book/es/v2/Herramientas-de-Git-Organización-interactiva
 title: Git - Revisión por selección
 url: "/book/es/v2/Herramientas-de-Git-Revisión-por-selección.html"
+aliases:
+- "/book/es/Las-herramientas-de-Git.html"
+- "/book/es/v1/Las-herramientas-de-Git.html"
+- "/book/es/Las-herramientas-de-Git-Selección-de-confirmaciones-de-cambios-concretas.html"
+- "/book/es/v1/Las-herramientas-de-Git-Selección-de-confirmaciones-de-cambios-concretas.html"
 ---
 <p>Hasta ahora, ya has aprendido la mayoría de los comandos diarios y el flujo de trabajo que necesitas para manejar y mantener un repositorio de Git para tu control del código fuente.
 Has conseguido cumplir con las tareas básicas de seguimiento y has agregado archivos, además has aprovechado el poder del area de staging y has conocido el tema de branching y merging.</p><p>Ahora vas a explorar unas cuantas cosas bastantes poderosas que Git puede realizar y que no necesariamente vas a usar en tu día a día, pero que puedes necesitar en algún momento.</p>
