--- a/external/book/content/book/es/v2/Herramientas-de-Git-Submódulos.html
+++ b/external/book/content/book/es/v2/Herramientas-de-Git-Submódulos.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Herramientas-de-Git-Agrupaciones
 title: Git - Submódulos
 url: "/book/es/v2/Herramientas-de-Git-Submódulos.html"
+aliases:
+- "/book/es/Las-herramientas-de-Git-Submódulos.html"
+- "/book/es/v1/Las-herramientas-de-Git-Submódulos.html"
 ---
 <h2 id="r_git_submodules">Submódulos</h2>
 <div class="paragraph">
