--- a/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Acerca-del-Control-de-Versiones.html
+++ b/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Acerca-del-Control-de-Versiones.html
@@ -16,6 +16,11 @@ book:
     previous: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Acerca-del-Control-de-Versiones
     next: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Una-breve-historia-de-Git
 title: Git - Acerca del Control de Versiones
+aliases:
+- "/book/es/Empezando.html"
+- "/book/es/v1/Empezando.html"
+- "/book/es/Empezando-Acerca-del-control-de-versiones.html"
+- "/book/es/v1/Empezando-Acerca-del-control-de-versiones.html"
 ---
 <p>Este capítulo se va a hablar de cómo comenzar a utilizar Git.  Empezaremos describiendo algunos conceptos básicos sobre las herramientas de control de versiones;  después, trataremos de explicar cómo hacer que Git funcione en tu sistema; finalmente, exploraremos cómo configurarlo para empezar a trabajar con él.  Al final de este capítulo deberás entender las razones por las cuales Git existe y conviene que lo uses, y deberás tener todo preparado para comenzar.</p>
 <h2 id="_acerca_del_control_de_versiones">Acerca del Control de Versiones</h2>
