--- a/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Configurando-Git-por-primera-vez.html
+++ b/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Configurando-Git-por-primera-vez.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Instalación-de-Git
     next: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-¿Cómo-obtener-ayuda%3F
 title: Git - Configurando Git por primera vez
+aliases:
+- "/book/es/Empezando-Configurando-Git-por-primera-vez.html"
+- "/book/es/v1/Empezando-Configurando-Git-por-primera-vez.html"
 ---
 <h2 id="r_first_time">Configurando Git por primera vez</h2>
 <div class="paragraph">
