--- a/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Fundamentos-de-Git.html
+++ b/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Fundamentos-de-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Una-breve-historia-de-Git
     next: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-La-Línea-de-Comandos
 title: Git - Fundamentos de Git
+aliases:
+- "/book/es/Empezando-Fundamentos-de-Git.html"
+- "/book/es/v1/Empezando-Fundamentos-de-Git.html"
 ---
 <h2 id="_fundamentos_de_git">Fundamentos de Git</h2>
 <div class="paragraph">
