--- a/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Instalación-de-Git.html
+++ b/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Instalación-de-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Configurando-Git-por-primera-vez
 title: Git - Instalación de Git
 url: "/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Instalación-de-Git.html"
+aliases:
+- "/book/es/Empezando-Instalando-Git.html"
+- "/book/es/v1/Empezando-Instalando-Git.html"
 ---
 <h2 id="_instalación_de_git">Instalación de Git</h2>
 <div class="paragraph">
