--- a/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Resumen.html
+++ b/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Resumen.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-¿Cómo-obtener-ayuda%3F
     next: book/es/v2/Fundamentos-de-Git-Obteniendo-un-repositorio-Git
 title: Git - Resumen
+aliases:
+- "/book/es/Empezando-Resumen.html"
+- "/book/es/v1/Empezando-Resumen.html"
 ---
 <h2 id="_resumen">Resumen</h2>
 <div class="paragraph">
