--- a/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Una-breve-historia-de-Git.html
+++ b/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Una-breve-historia-de-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Acerca-del-Control-de-Versiones
     next: book/es/v2/Inicio---Sobre-el-Control-de-Versiones-Fundamentos-de-Git
 title: Git - Una breve historia de Git
+aliases:
+- "/book/es/Empezando-Una-breve-historia-de-Git.html"
+- "/book/es/v1/Empezando-Una-breve-historia-de-Git.html"
 ---
 <h2 id="_una_breve_historia_de_git">Una breve historia de Git</h2>
 <div class="paragraph">
