--- a/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-¿Cómo-obtener-ayuda?.html
+++ b/external/book/content/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-¿Cómo-obtener-ayuda?.html
@@ -19,6 +19,8 @@ title: Git - ¿Cómo obtener ayuda?
 url: "/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-¿Cómo-obtener-ayuda?.html"
 aliases:
 - "/book/es/v2/Inicio---Sobre-el-Control-de-Versiones-¿Cómo-obtener-ayuda.html"
+- "/book/es/Empezando-Obteniendo-ayuda.html"
+- "/book/es/v1/Empezando-Obteniendo-ayuda.html"
 ---
 <h2 id="r_git_help">¿Cómo obtener ayuda?</h2>
 <div class="paragraph">
