--- a/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Archivos-empaquetadores.html
+++ b/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Archivos-empaquetadores.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Los-entresijos-internos-de-Git-Referencias-Git
     next: book/es/v2/Los-entresijos-internos-de-Git-Las-especificaciones-para-hacer-referencia-a…​-refspec
 title: Git - Archivos empaquetadores
+aliases:
+- "/book/es/Los-entresijos-internos-de-Git-Archivos-empaquetadores.html"
+- "/book/es/v1/Los-entresijos-internos-de-Git-Archivos-empaquetadores.html"
 ---
 <h2 id="_archivos_empaquetadores">Archivos empaquetadores</h2>
 <div class="paragraph">
