--- a/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Fontanería-y-porcelana.html
+++ b/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Fontanería-y-porcelana.html
@@ -17,6 +17,11 @@ book:
     next: book/es/v2/Los-entresijos-internos-de-Git-Los-objetos-Git
 title: Git - Fontanería y porcelana
 url: "/book/es/v2/Los-entresijos-internos-de-Git-Fontanería-y-porcelana.html"
+aliases:
+- "/book/es/Los-entresijos-internos-de-Git.html"
+- "/book/es/v1/Los-entresijos-internos-de-Git.html"
+- "/book/es/Los-entresijos-internos-de-Git-Fontaneria-y-porcelana.html"
+- "/book/es/v1/Los-entresijos-internos-de-Git-Fontaneria-y-porcelana.html"
 ---
 <p>Puede que hayas llegado a este capítulo saltando desde alguno previo o puede que hayas llegado tras leer todo el resto del libro - en uno u otro caso, aquí es donde aprenderás acerca del funcionamiento interno y la implementación de Git.
 Nos parece que esta información es realmente importante para entender cuan útil y potente es Git, pero algunas personas opinan que puede ser confuso e innecesariamente complejo para novatos.
