--- a/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Las-especificaciones-para-hacer-referencia-a…​-refspec.html
+++ b/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Las-especificaciones-para-hacer-referencia-a…​-refspec.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Los-entresijos-internos-de-Git-Protocolos-de-transferencia
 title: Git - Las especificaciones para hacer referencia a…​  (refspec)
 url: "/book/es/v2/Los-entresijos-internos-de-Git-Las-especificaciones-para-hacer-referencia-a…​-refspec.html"
+aliases:
+- "/book/es/Los-entresijos-internos-de-Git-Las-especificaciones-para-hacer-referencia-a-refspec.html"
+- "/book/es/v1/Los-entresijos-internos-de-Git-Las-especificaciones-para-hacer-referencia-a-refspec.html"
 ---
 <h2 id="r_refspec">Las especificaciones para hacer referencia a…​  (refspec)</h2>
 <div class="paragraph">
