--- a/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Los-objetos-Git.html
+++ b/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Los-objetos-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Los-entresijos-internos-de-Git-Fontanería-y-porcelana
     next: book/es/v2/Los-entresijos-internos-de-Git-Referencias-Git
 title: Git - Los objetos Git
+aliases:
+- "/book/es/Los-entresijos-internos-de-Git-Los-objetos-Git.html"
+- "/book/es/v1/Los-entresijos-internos-de-Git-Los-objetos-Git.html"
 ---
 <h2 id="r_objects">Los objetos Git</h2>
 <div class="paragraph">
