--- a/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Protocolos-de-transferencia.html
+++ b/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Protocolos-de-transferencia.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Los-entresijos-internos-de-Git-Las-especificaciones-para-hacer-referencia-a…​-refspec
     next: book/es/v2/Los-entresijos-internos-de-Git-Mantenimiento-y-recuperación-de-datos
 title: Git - Protocolos de transferencia
+aliases:
+- "/book/es/Los-entresijos-internos-de-Git-Protocolos-de-transferencia.html"
+- "/book/es/v1/Los-entresijos-internos-de-Git-Protocolos-de-transferencia.html"
 ---
 <h2 id="_protocolos_de_transferencia">Protocolos de transferencia</h2>
 <div class="paragraph">
