--- a/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Recapitulación.html
+++ b/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Recapitulación.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Apéndice-A:-Git-en-otros-entornos-Interfaces-gráficas
 title: Git - Recapitulación
 url: "/book/es/v2/Los-entresijos-internos-de-Git-Recapitulación.html"
+aliases:
+- "/book/es/Los-entresijos-internos-de-Git-Recapitulación.html"
+- "/book/es/v1/Los-entresijos-internos-de-Git-Recapitulación.html"
 ---
 <h2 id="_recapitulación_3">Recapitulación</h2>
 <div class="paragraph">
