--- a/external/book/content/book/es/v2/Personalización-de-Git-Configuración-de-Git.html
+++ b/external/book/content/book/es/v2/Personalización-de-Git-Configuración-de-Git.html
@@ -17,6 +17,11 @@ book:
     next: book/es/v2/Personalización-de-Git-Git-Attributes
 title: Git - Configuración de Git
 url: "/book/es/v2/Personalización-de-Git-Configuración-de-Git.html"
+aliases:
+- "/book/es/Personalizando-Git.html"
+- "/book/es/v1/Personalizando-Git.html"
+- "/book/es/Personalizando-Git-Configuración-de-Git.html"
+- "/book/es/v1/Personalizando-Git-Configuración-de-Git.html"
 ---
 <p>Hasta ahora, hemos visto los aspectos básicos del funcionamiento de Git y la
 manera de utilizarlo; además de haber presentado una serie de herramientas
