--- a/external/book/content/book/es/v2/Personalización-de-Git-Git-Attributes.html
+++ b/external/book/content/book/es/v2/Personalización-de-Git-Git-Attributes.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Personalización-de-Git-Puntos-de-enganche-en-Git
 title: Git - Git Attributes
 url: "/book/es/v2/Personalización-de-Git-Git-Attributes.html"
+aliases:
+- "/book/es/Personalizando-Git-Atributos-de-Git.html"
+- "/book/es/v1/Personalizando-Git-Atributos-de-Git.html"
 ---
 <h2 id="_git_attributes">Git Attributes</h2>
 <div class="paragraph">
