--- a/external/book/content/book/es/v2/Personalización-de-Git-Puntos-de-enganche-en-Git.html
+++ b/external/book/content/book/es/v2/Personalización-de-Git-Puntos-de-enganche-en-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Personalización-de-Git-Un-ejemplo-de-implantación-de-una-determinada-política-en-Git
 title: Git - Puntos de enganche en Git
 url: "/book/es/v2/Personalización-de-Git-Puntos-de-enganche-en-Git.html"
+aliases:
+- "/book/es/Personalizando-Git-Puntos-de-enganche-Git.html"
+- "/book/es/v1/Personalizando-Git-Puntos-de-enganche-Git.html"
 ---
 <h2 id="r_git_hooks">Puntos de enganche en Git</h2>
 <div class="paragraph">
