--- a/external/book/content/book/es/v2/Personalización-de-Git-Recapitulación.html
+++ b/external/book/content/book/es/v2/Personalización-de-Git-Recapitulación.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Git-y-Otros-Sistemas-Git-como-Cliente
 title: Git - Recapitulación
 url: "/book/es/v2/Personalización-de-Git-Recapitulación.html"
+aliases:
+- "/book/es/Personalizando-Git-Recapitulación.html"
+- "/book/es/v1/Personalizando-Git-Recapitulación.html"
 ---
 <h2 id="_recapitulación_2">Recapitulación</h2>
 <div class="paragraph">
