--- a/external/book/content/book/es/v2/Personalización-de-Git-Un-ejemplo-de-implantación-de-una-determinada-política-en-Git.html
+++ b/external/book/content/book/es/v2/Personalización-de-Git-Un-ejemplo-de-implantación-de-una-determinada-política-en-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Personalización-de-Git-Recapitulación
 title: Git - Un ejemplo de implantación de una determinada política en Git
 url: "/book/es/v2/Personalización-de-Git-Un-ejemplo-de-implantación-de-una-determinada-política-en-Git.html"
+aliases:
+- "/book/es/Personalizando-Git-Un-ejemplo-de-implantación-de-una-determinada-política-en-Git.html"
+- "/book/es/v1/Personalizando-Git-Un-ejemplo-de-implantación-de-una-determinada-política-en-Git.html"
 ---
 <h2 id="r_an_example_git_enforced_policy">Un ejemplo de implantación de una determinada política en Git</h2>
 <div class="paragraph">
