--- a/external/book/content/book/es/v2/Ramificaciones-en-Git-Flujos-de-Trabajo-Ramificados.html
+++ b/external/book/content/book/es/v2/Ramificaciones-en-Git-Flujos-de-Trabajo-Ramificados.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Ramificaciones-en-Git-Gestión-de-Ramas
     next: book/es/v2/Ramificaciones-en-Git-Ramas-Remotas
 title: Git - Flujos de Trabajo Ramificados
+aliases:
+- "/book/es/Ramificaciones-en-Git-Flujos-de-trabajo-ramificados.html"
+- "/book/es/v1/Ramificaciones-en-Git-Flujos-de-trabajo-ramificados.html"
 ---
 <h2 id="_flujos_de_trabajo_ramificados">Flujos de Trabajo Ramificados</h2>
 <div class="paragraph">
