--- a/external/book/content/book/es/v2/Ramificaciones-en-Git-Gestión-de-Ramas.html
+++ b/external/book/content/book/es/v2/Ramificaciones-en-Git-Gestión-de-Ramas.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Ramificaciones-en-Git-Flujos-de-Trabajo-Ramificados
 title: Git - Gestión de Ramas
 url: "/book/es/v2/Ramificaciones-en-Git-Gestión-de-Ramas.html"
+aliases:
+- "/book/es/Ramificaciones-en-Git-Gestión-de-ramificaciones.html"
+- "/book/es/v1/Ramificaciones-en-Git-Gestión-de-ramificaciones.html"
 ---
 <h2 id="r_branch_management">Gestión de Ramas</h2>
 <div class="paragraph">
