--- a/external/book/content/book/es/v2/Ramificaciones-en-Git-Procedimientos-Básicos-para-Ramificar-y-Fusionar.html
+++ b/external/book/content/book/es/v2/Ramificaciones-en-Git-Procedimientos-Básicos-para-Ramificar-y-Fusionar.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Ramificaciones-en-Git-Gestión-de-Ramas
 title: Git - Procedimientos Básicos para Ramificar y Fusionar
 url: "/book/es/v2/Ramificaciones-en-Git-Procedimientos-Básicos-para-Ramificar-y-Fusionar.html"
+aliases:
+- "/book/es/Ramificaciones-en-Git-Procedimientos-básicos-para-ramificar-y-fusionar.html"
+- "/book/es/v1/Ramificaciones-en-Git-Procedimientos-básicos-para-ramificar-y-fusionar.html"
 ---
 <h2 id="_procedimientos_básicos_para_ramificar_y_fusionar">Procedimientos Básicos para Ramificar y Fusionar</h2>
 <div class="paragraph">
