--- a/external/book/content/book/es/v2/Ramificaciones-en-Git-Ramas-Remotas.html
+++ b/external/book/content/book/es/v2/Ramificaciones-en-Git-Ramas-Remotas.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Ramificaciones-en-Git-Flujos-de-Trabajo-Ramificados
     next: book/es/v2/Ramificaciones-en-Git-Reorganizar-el-Trabajo-Realizado
 title: Git - Ramas Remotas
+aliases:
+- "/book/es/Ramificaciones-en-Git-Ramas-Remotas.html"
+- "/book/es/v1/Ramificaciones-en-Git-Ramas-Remotas.html"
 ---
 <h2 id="r_remote_branches">Ramas Remotas</h2>
 <div class="paragraph">
