--- a/external/book/content/book/es/v2/Ramificaciones-en-Git-Recapitulación.html
+++ b/external/book/content/book/es/v2/Ramificaciones-en-Git-Recapitulación.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Git-en-el-Servidor-Los-Protocolos
 title: Git - Recapitulación
 url: "/book/es/v2/Ramificaciones-en-Git-Recapitulación.html"
+aliases:
+- "/book/es/Ramificaciones-en-Git-Recapitulación.html"
+- "/book/es/v1/Ramificaciones-en-Git-Recapitulación.html"
 ---
 <h2 id="_recapitulación">Recapitulación</h2>
 <div class="paragraph">
