--- a/external/book/content/book/es/v2/Ramificaciones-en-Git-Reorganizar-el-Trabajo-Realizado.html
+++ b/external/book/content/book/es/v2/Ramificaciones-en-Git-Reorganizar-el-Trabajo-Realizado.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Ramificaciones-en-Git-Ramas-Remotas
     next: book/es/v2/Ramificaciones-en-Git-Recapitulación
 title: Git - Reorganizar el Trabajo Realizado
+aliases:
+- "/book/es/Ramificaciones-en-Git-Reorganizando-el-trabajo-realizado.html"
+- "/book/es/v1/Ramificaciones-en-Git-Reorganizando-el-trabajo-realizado.html"
 ---
 <h2 id="r_rebasing">Reorganizar el Trabajo Realizado</h2>
 <div class="paragraph">
