--- a/external/book/content/book/es/v2/Ramificaciones-en-Git-¿Qué-es-una-rama?.html
+++ b/external/book/content/book/es/v2/Ramificaciones-en-Git-¿Qué-es-una-rama?.html
@@ -19,6 +19,10 @@ title: Git - ¿Qué es una rama?
 url: "/book/es/v2/Ramificaciones-en-Git-¿Qué-es-una-rama?.html"
 aliases:
 - "/book/es/v2/Ramificaciones-en-Git-¿Qué-es-una-rama.html"
+- "/book/es/Ramificaciones-en-Git.html"
+- "/book/es/v1/Ramificaciones-en-Git.html"
+- "/book/es/Ramificaciones-en-Git-¿Qué-es-una-rama?.html"
+- "/book/es/v1/Ramificaciones-en-Git-¿Qué-es-una-rama?.html"
 ---
 <p>
 Cualquier sistema de control de versiones moderno tiene algún mecanismo para soportar el uso de ramas.
