--- a/external/book/content/book/es/v2/_index.html
+++ b/external/book/content/book/es/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/es/v2.html"
 aliases:
 - "/book/es/v2/index.html"
+- "/book/es/v1/index.html"
 - "/book/es/index.html"
 ---
