--- a/external/book/content/book/es/v2/Git-en-el-Servidor-Configurando-el-servidor.html
+++ b/external/book/content/book/es/v2/Git-en-el-Servidor-Configurando-el-servidor.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Git-en-el-Servidor-Generando-tu-clave-pública-SSH
     next: book/es/v2/Git-en-el-Servidor-El-demonio-Git
 title: Git - Configurando el servidor
+aliases:
+- "/book/es/Git-en-un-servidor-Preparando-el-servidor.html"
+- "/book/es/v1/Git-en-un-servidor-Preparando-el-servidor.html"
 ---
 <h2 id="r_setting_up_server">Configurando el servidor</h2>
 <div class="paragraph">
