--- a/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Mantenimiento-y-recuperación-de-datos.html
+++ b/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Mantenimiento-y-recuperación-de-datos.html
@@ -17,6 +17,9 @@ book:
     next: book/es/v2/Los-entresijos-internos-de-Git-Variables-de-entorno
 title: Git - Mantenimiento y recuperación de datos
 url: "/book/es/v2/Los-entresijos-internos-de-Git-Mantenimiento-y-recuperación-de-datos.html"
+aliases:
+- "/book/es/Los-entresijos-internos-de-Git-Mantenimiento-y-recuperación-de-datos.html"
+- "/book/es/v1/Los-entresijos-internos-de-Git-Mantenimiento-y-recuperación-de-datos.html"
 ---
 <h2 id="_mantenimiento_y_recuperación_de_datos">Mantenimiento y recuperación de datos</h2>
 <div class="paragraph">
