--- a/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Referencias-Git.html
+++ b/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Referencias-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/es/v2/Los-entresijos-internos-de-Git-Los-objetos-Git
     next: book/es/v2/Los-entresijos-internos-de-Git-Archivos-empaquetadores
 title: Git - Referencias Git
+aliases:
+- "/book/es/Los-entresijos-internos-de-Git-Referencias-Git.html"
+- "/book/es/v1/Los-entresijos-internos-de-Git-Referencias-Git.html"
 ---
 <h2 id="r_git_refs">Referencias Git</h2>
 <div class="paragraph">
